// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closing-php-tag.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/php
<?php
var_dump($argv);
?>

=====================================output=====================================
#!/usr/bin/php
<?php var_dump($argv);
?>

================================================================================
`;

exports[`inline.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/php
<?php var_dump($argv);

=====================================output=====================================
#!/usr/bin/php
<?php var_dump($argv);

================================================================================
`;

exports[`shebang.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/usr/bin/php
<?php
var_dump($argv);

=====================================output=====================================
#!/usr/bin/php
<?php var_dump($argv);

================================================================================
`;

exports[`shebang-eof-newline.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#! /usr/bin/env php
<?php
$status = 0; exit($status);

=====================================output=====================================
#! /usr/bin/env php
<?php
$status = 0;
exit($status);

================================================================================
`;
